Micro-optimize by using the empty Collections instead of the Collection#of variant as the empty Collection no-ops the results