@@ -1,5 +1,6 @@
 package mekanism.api.chemical.merged;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.function.BooleanSupplier;
 import mekanism.api.Action;
@@ -27,7 +28,7 @@ public abstract class ChemicalTankWrapper<CHEMICAL extends Chemical<CHEMICAL>, S
 
     @Deprecated(forRemoval = true, since = "10.5.15")
     protected ChemicalTankWrapper(MergedChemicalTank mergedTank, IChemicalTank<CHEMICAL, STACK> internal, BooleanSupplier insertCheck) {
-        this(mergedTank, internal, List.of(), insertCheck);
+        this(mergedTank, internal, Collections.emptyList(), insertCheck);
     }
 
     protected ChemicalTankWrapper(MergedChemicalTank mergedTank, IChemicalTank<CHEMICAL, STACK> internal, List<IChemicalTank<?, ?>> otherTanks,
