@@ -1,5 +1,6 @@
 package mekanism.generators.common.tile.fission;
 
+import java.util.Collections;
 import java.util.EnumMap;
 import java.util.List;
 import java.util.Map;
@@ -72,7 +73,7 @@ public class TileEntityFissionReactorPort extends TileEntityFissionReactorCasing
     @NotNull
     @Override
     protected IFluidTankHolder getInitialFluidTanks(IContentsListener listener) {
-        return side -> getMode() == FissionPortMode.INPUT ? getMultiblock().getFluidTanks(side) : List.of();
+        return side -> getMode() == FissionPortMode.INPUT ? getMultiblock().getFluidTanks(side) : Collections.emptyList();
     }
 
     @NotNull
