@@ -5,6 +5,7 @@ import com.blamejared.crafttweaker.api.annotation.BracketDumper;
 import com.blamejared.crafttweaker.api.annotation.ZenRegister;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Function;
@@ -88,7 +89,7 @@ public class CrTBracketDumpers {
               .registryAccess()
               .registry(registryKey);
         if (optionalRegistry.isEmpty()) {
-            return List.of();
+            return Collections.emptyList();
         }
         Registry<?> registry = optionalRegistry.get();
         List<String> list = new ArrayList<>();
